version 1.0pre1
- add range-mean graph option to GUI Variable menu
- add retrievable variable $pd = data periodicity
- add min() and max() functions to the functions available 
  for use with the "genr" command
- add Least Absolute Deviations regression ("lad" command)
- fix bugs in saving output to named file, in both gretlcli and
  gui program
- fix bug in boxplots for languages other than English
- fix error in df in sample script ps4-2.inp
- fix translation of date strings in gretl output
- linux: move plugins to ${prefix}/lib/gretl
- gnome 2.0: use gconf apparatus
- gtk 2.0: fix remove/add toolbar breakage; change name of program
  back to "gretl" and "gretl_x11" (not "gretl2", "gretl2_x11")
- revamp and internationalize TeX and RTF printing functions
  including those for summary stats and correlation matrix
- make TeX format available for all model windows
- remove HTML print/copy options: can't maintain four formats
  with internationalization!

08/25/2002 version 0.999
- add support for gtk 2.0 and gnome 2.0
- enhanced gui with gtk 2.0
- add "make check" target to test against the NIST reference
  data files for numerical accuracy
- improve support for building on win32
- bug fixes in boxplot functions
- always show 6 significant figures for coefficient estimates
  and standard errors in regression output
- numerous NLS/translation fixes, improvements
- NLS translation of TeX model results
- bug fixes for Excel importer
- reorganization of gui source files
- fix bug in random variable generation in gui
- add support for data files from Jeffrey Wooldridge's
  econometrics textbook
- scrap ugly overloading of "clear_model" function
- fix miscellaneous bugs revealed by valgrind
- raise library version to 16.0.0

07/09/2002 version 0.998 
- increment library version to 15.0.0
- update Spanish translations
- fixes to RPM build process
- switch to more accurate (cephes) algorithms for p-values
- add materials for building gretl on win32