@@ -1331,3 +1331,36 @@ int go_gnuplot (GPT_SPEC *plot, char *fname, PATHS *ppaths)
     if (miss) err = 2;
     return err;
 }
+
+/* ........................................................... */
+
+int rmplot (const LIST list, double **Z, DATAINFO *pdinfo, PRN *prn,
+	    PATHS *ppaths)
+{
+    int err;
+    void *handle;
+    int (*range_mean_graph) (int, double **, const DATAINFO *, 
+                             PRN *, PATHS *);
+
+    if (open_plugin("range-mean", &handle)) return 1;
+
+    range_mean_graph = get_plugin_function("range_mean_graph", handle);
+
+    if (range_mean_graph == NULL) {
+        pprintf(prn, _("Couldn't load plugin function\n"));
+        close_plugin(handle);
+        return 1;
+    }
+
+    err = range_mean_graph (list[1], Z, pdinfo, prn, ppaths);
+
+    close_plugin(handle);
+
+    if (!err) {
+        return gnuplot_display(ppaths);
+    } else {
+	return err;
+    }
+}
+
+
