@@ -947,6 +947,30 @@ is created.  The rholist entries can be given as numerical values or as the
 names of variables previously defined.
 
 #
+rmplot
+@Graphs
+Usage:          rmplot varname
+
+This command creates a simple graph to help in deciding whether a time series,
+y(t), has constant variance or not.  We take the full sample t=1,...,T and
+divide it into small subsamples of arbitrary size k.  The first subsample is
+formed by y(1),...,y(k), the second is y(k+1),...,y(2k), and so on.  For each
+subsample we calculate the sample mean and range (= maximum-minimum), and we
+construct a graph with the means on the horizontal axis and the ranges on the
+vertical.  So each subsample is represented by a point in this plane.  If the
+variance of the series is constant we would expect the subsample range to be
+independent of the subsample mean; if we see the points approximate an
+upward-sloping line this suggests the variance of the series is increasing in
+its mean; and if the points approximate a downward sloping line this suggests
+the variance is decreasing in the mean.
+
+Besides the graph, gretl displays the means and ranges for each subsample,
+along with the slope coefficient for an OLS regression of the range on the
+mean and the p-value for the null hypothesis that this slope is zero.  If the
+slope coefficient is significant at the 10 percent significance level then the
+fitted line from the regression of range on mean is shown on the graph.
+
+#
 run
 @Programming
 Usage:          run inputfile
